--- a/scripts/yt_trend_analysis.ipynb
+++ b/scripts/yt_trend_analysis.ipynb
@@ -34,10 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Linear Regression for Trend Prediction\n",
-    "# Select relevant features for regression\n",
-    "X = df[['Likes', 'Comments', 'Views']]\n",
-    "y = df['Views']  # Predicting views as the target\n"
+    "X = df[['Likes', 'Comments']]  # Only use Likes and Comments as predictors\n",
+    "y = df['Views']  # Target variable is Views\n"
    ]
   },
   {
